Wed Apr 21 21:18:00 2004  Evandro Fernandes Giovanini  <evandrofg@ig.com.br>

	* configure.in(ALL_LINGUAS): Added "pt_BR" (Brazilian Portuguese).

Thu Apr 15 20:43:00 2004  Adam Weinberger <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

Thu Apr 15 14:19:40 2004  George Lebl <jirka@5z.com>

	* lib/combinatorics/factorial.gel, lib/combinatorics/misc.gel,
	  lib/linear_algebra/linear_algebra.gel,
	  lib/number_theory/factoring.gel, lib/number_theory/modulus.gel,
	  lib/number_theory/primes.gel,
	  src/calc.c, src/eval.c, src/funclib.c, src/gnome-genius.c,
	  src/matrixw.c, src/mpzextra.c: fix some typos in strings.  Mostly
	  s/then/than/.

Tue Apr 13 11:17:34 2004  George Lebl <jirka@5z.com>

	* src/graphing.c: move the plot dialog buttons to be in HIGgy order

Fri Apr 09 18:34:58 2004  George Lebl <jirka@5z.com>

	* INSTALL.MacOSX: Mac OS X install instructions from Linc Davis
	  <ld-temp-spe8@pobox.com>

	* configure.in: Changed help for --enable-gnome and
	  --enable-gtksourceview (changed to --disable-* since they're
	  on by default)

Tue Apr 06 15:41:18 2004  George Lebl <jirka@5z.com>

	* src/util.[ch], src/mpwrap.c: whack the custom mem-allocation cruft
	  and let gmp use its own allocation.  Doesn't seem to improve speed
	  by much at all, but reduces cruft.

Sun Apr 04 22:30:12 2004  George Lebl <jirka@5z.com>

	* src/geniustests.txt: added some tests that went wrong at some
	  point long time ago

Sun Apr 04 17:39:55 2004  George Lebl <jirka@5z.com>

	* lib/functions/complex_numbers.gel: add cis function.  Also fix
	  the MoebiusMapping* definitions

	* lib/functions/Makefile.am: forgot to include complex_numbers.gel
	  in the library DOH! this actually adds all those functions promised
	  in 0.6.0.  Affects: Argument, arg, Arg, MoebiusDiskMapping,
	  MoebiusMapping, MoebiusMappingInftyToOne, MoebiusMappingInftyToZero,
	  MoebiusMappingInftyToInfty.

Sun Apr 04 17:27:33 2004  George Lebl <jirka@5z.com>
