@@ -1,8 +1,13 @@
 SUBDIRS = po vicious-extensions src lib doc
 
+mimeinfodir = $(datadir)/mime-info
+mimeinfo_DATA = genius.keys genius.mime
+
 EXTRA_DIST = \
 	genius.spec \
 	genius.spec.in \
+	genius.mime \
+	genius.keys \
 	intltool-modules/XML/Parser/Style/OrigTree.pm \
 	intltool-extract.in	\
 	intltool-merge.in	\
