@@ -1,0 +1,8 @@
+text/x-genius
+	description=Genius GEL program
+	category=Documents/Numeric
+	default_action_type=application
+	default_application_id=gnome-genius
+	short_list_application_ids_for_novice_user_level=gnome-genius
+	short_list_application_ids_for_intermediate_user_level=gnome-genius
+	short_list_application_ids_for_advanced_user_level=gnome-genius
