@@ -1,0 +1,2 @@
+text/x-genius
+	ext: gel GEL
