@@ -1,3 +1,14 @@
+Thu May 27 15:39:48 2004  George Lebl <jirka@5z.com>
+
+	* src/genius-readline-helper.c, src/gnome-genius.[ch]:  Add
+	  Black on white mode for those that don't see white on black too
+	  well.  Start using vfs, but we still don't use it for "loading",
+	  nor do we setup the filechooser or whatnot, must figure out how to
+	  do that.  Accept file drops on the window and open those files.
+
+	* Makefile.am, genius.keys, genius.mime: temporary placeholders, need
+	  to add this to the shared mime info stuff or whatnot.
+
 Wed Apr 21 21:18:00 2004  Evandro Fernandes Giovanini  <evandrofg@ig.com.br>
 
 	* configure.in(ALL_LINGUAS): Added "pt_BR" (Brazilian Portuguese).
